[metadata]
name = gme
version = 1.3
author = USITC Gravity Modeling Group
author_email = gravity@usitc.gov
description = USITC Gravity Modeling Environment
long_description = file: README.md
long_description_content_type = text/markdown
url = https://usitc-gravity-group.github.io/GME/
project_urls =
    Bug Tracker = https://github.com/USITC-Gravity-Group/GME/issues
    Documentation = https://usitc-gravity-group.github.io/GME/
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication

[options]
package_dir =
    = src
packages = find:
install_requires =
    numpy>=1.19.2
    scipy>=1.5.2
    pandas >=1.1.2
    matplotlib >=3.4.2
    statsmodels >= 0.12.2
python_requires = >=3.7

[options.packages.find]
where = src